[package]
name = "relayport-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
