[package]
name = "relayport-rs"
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause"
repository = "https://github.com/mtelahun/relayport-rs"
description = "Fast and easy abstraction for proxying TCP ports."
keywords = ["async", "network", "proxy", "tokio", "web"]
categories = ["network-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
